[package]
name = "mempool-observer-fullrbf-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.29"
hex = { version = "0.4", features = [ "serde" ] }
csv = "1.1"
tinytemplate = "1.1"
serde = { version = "1", features = ["derive"] }
